--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10871,7 +10871,12 @@
 "~^/doc/sociology/1962-calhoun.pdfwww.*$" "/docs/sociology/1962-calhoun.pdf";
 "~^/nicotine\.html.*$" "/nicotine";
 "~^/static/build/generateBacklinks$" "/static/build/generateBacklinks.hs";
-
+"~^/review/Cat-Sense.*$" "/review/cat";
+"~^/doc/genetics/heritable/1949-pastore-thenaturenurturecontroversy$" "/doc/genetics/heritable/1949-pastore-thenaturenurturecontroversy.pdf";
+"~^/doc/dnb/2012-mitchell.pdf.*$" "/doc/statistics/meta-analysis/2012-mitchell.pdf";
+"~^/GANs-for-anime.*$" "/face";
+"~^/death\+note\+anonymity.*$" "/death-note-anonymity";
+"~^/dalle2.*$" "https://openai.com/dall-e-2/";
 "~^/doc/dnmarchivedata/2023-03-03-2023-04-02-all-fleshed-out-transactions.csv$" "/doc/darknet-market/dnm-archive/index";
 "~^/doc/statistics/1963-anscombe.pdf$" "/doc/statistics/decision/1963-anscombe.pdf";
 "~^/static/redirect/Redirects2.hs$" "/static/redirect/nginx.conf";
@@ -10943,7 +10948,11 @@
 "~^/turing-compl$" "/turing-complete";
 "~^/doc/genetics/2005-liao.pdf$" "/doc/genetics/selection/2005-liao.pdf";
 "~^/static/metadata/custom.hs$" "/metadata/custom.yaml";
-"~^static/build/markdown.elc.*$" "/static/build/markdown.el";
+"~^/static/build/markdown.elc.*$" "/static/build/markdown.el";
+"~^/doc/biology/images/nav_search.gif.*$" "/static/404.html";
+"~^/doc/biology/compnews/urgnorvirnr.html.*$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/biology/2000-iapac-norvir/images/nav_mainpage.gif.*$" "/doc/biology/2000-iapac-norvir/nav_mainpage.gif";
+"~^/doc/2006-drescher-goodandreal.pdf.*$" "/doc/statistics/decision/2006-drescher-goodandreal.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -16357,6 +16366,9 @@
 "~^/casino-.*$" "/static/404";
 "~^/arynews.*$" "/static/404";
 "~^/1021519652.*$" "/static/404";
+"~^/frischetrueffeln.*$" "/static/404";
+"~^/tvplay.*$" "/static/404";
+"~^/distransnaker.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
