--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9113,3 +9113,203 @@ default "";
 "~^/doc/anime/eva/2009-rebuild-2.22-1080p%20bluray%20dts-hd%20ma%20x264-decay.mkv_snapshot_01.51.55_%5b2010.05.28_06.12.44%5d.jpg.*$" "/doc/anime/eva/2009-rebuild-2.22-1080p_bluray_dts-hd_ma_x264-decay.mkv_snapshot_01.51.55__2010.05.28_06.12.44.jpg";
 "~^/metadata/links.hs.*$" "/metadata/sites.hs";
 "~^/metadata/today-link.html.*$" "/metadata/today-site.html";
+"~^/doc/statistics/order/1947-dubois-theclassificationprogram.pdf.*$" "/doc/iq/1947-dubois-theclassificationprogram.pdf";
+"~^/doc/iq/1904-spearman.pdf.*$" "/doc/iq/1904-spearman-2.pdf";
+"~^/doc/dual-n-back/gwern-funnel.png.*$" "/doc/dual-n-back/gwern-dnb-funnel.png";
+"~^/doc/iodine/gwern-funnel.png.*$" "/doc/iodine/gwern-iodization-funnel.png";
+"~^/doc/creatine/gwern-forest.png.*$" "/doc/creatine/gwern-creatine-forest.png";
+"~^/doc/dual-n-back/gwern-forest.png.*$" "/doc/dual-n-back/gwern-dnb-forest.png";
+"~^/doc/iodine/gwern-forest.png.*$" "/doc/iodine/gwern-iodization-forest.png";
+"~^/doc/genetics/heritable/correlation/2014-toro.pdf.*$" "/doc/iq/2014-toro.pdf";
+"~^/doc/statistics/1926-yule.pdf.*$" "/doc/statistics/causality/1926-yule.pdf";
+"~^/doc/iq/1920-thorndike.pdf.*$" "/doc/iq/1920-thorndike-2.pdf";
+"~^/doc/math/1926-ramsey.pdf.*$" "/doc/math/1926-ramsey-2.pdf";
+"~^/doc/economics/1927-ramsey.pdf.*$" "/doc/economics/1927-ramsey-2.pdf";
+"~^/doc/genetics/heritable/1971-jensen.pdf.*$" "/doc/genetics/heritable/1971-jensen-2.pdf";
+"~^/doc/genetics/selection/natural/human/1971-shockley.pdf.*$" "/doc/genetics/selection/natural/human/1971-shockley-2.pdf";
+"~^/doc/genetics/heritable/1972-jensen-4.pdf.*$" "/doc/genetics/heritable/1972-jensen-4-2.pdf";
+"~^/doc/iq/1972-page.pdf.*$" "/doc/iq/1972-page-2.pdf";
+"~^/doc/iq/1975-cronbach.pdf.*$" "/doc/iq/1975-cronbach-2.pdf";
+"~^/doc/iq/high/1975-keating.pdf.*$" "/doc/iq/high/1975-keating-2.pdf";
+"~^/doc/iq/1976-montour.pdf.*$" "/doc/iq/1976-montour-2.pdf";
+"~^/doc/iq/1977-smith.pdf.*$" "/doc/iq/1977-smith-2.pdf";
+"~^/doc/genetics/heritable/1979-jensen.pdf.*$" "/doc/genetics/heritable/1979-jensen-2.pdf";
+"~^/doc/iq/1982-stanley.pdf.*$" "/doc/iq/1982-stanley-2.pdf";
+"~^/doc/genetics/heritable/correlation/1983-goddard.pdf.*$" "/doc/genetics/heritable/correlation/1983-goddard-2.pdf";
+"~^/doc/genetics/heritable/1983-jensen-2.pdf.*$" "/doc/genetics/heritable/1983-jensen-2-2.pdf";
+"~^/doc/iq/1986-jensen.pdf.*$" "/doc/iq/1986-jensen-2.pdf";
+"~^/doc/genetics/heritable/1987-defries.pdf.*$" "/doc/genetics/heritable/1987-defries-2.pdf";
+"~^/doc/iq/1991-jensen.pdf.*$" "/doc/iq/1991-jensen-2.pdf";
+"~^/doc/psychology/cognitive-bias/sunk-cost/1991-phillips.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1991-phillips-2.pdf";
+"~^/doc/genetics/heritable/dog/1997-wilsson.pdf.*$" "/doc/genetics/heritable/dog/1997-wilsson-2.pdf";
+"~^/doc/iq/2000-lubinski.pdf.*$" "/doc/iq/2000-lubinski-2.pdf";
+"~^/doc/iq/2000-swiatek.pdf.*$" "/doc/iq/2000-swiatek-2.pdf";
+"~^/doc/genetics/heritable/2001-ioannidis.pdf.*$" "/doc/genetics/heritable/2001-ioannidis-2.pdf";
+"~^/doc/genetics/heritable/2001-rowe.pdf.*$" "/doc/genetics/heritable/2001-rowe-2.pdf";
+"~^/doc/modafinil/2004-becker.pdf.*$" "/doc/modafinil/2004-becker-2.pdf";
+"~^/doc/genetics/heritable/correlation/2005-johnson.pdf.*$" "/doc/genetics/heritable/correlation/2005-johnson-2.pdf";
+"~^/doc/cat/catnip/2005-thomas.pdf.*$" "/doc/cat/catnip/2005-thomas-2.pdf";
+"~^/doc/iq/high/smpy/2005-wallace.pdf.*$" "/doc/iq/high/smpy/2005-wallace-2.pdf";
+"~^/doc/philosophy/epistemology/2006-harris.pdf.*$" "/doc/philosophy/epistemology/2006-harris-2.pdf";
+"~^/doc/biology/portia/2006-jackson.pdf.*$" "/doc/biology/portia/2006-jackson-2.pdf";
+"~^/doc/anime/eva/2008-gardner.pdf.*$" "/doc/anime/eva/2008-gardner-2.pdf";
+"~^/doc/biology/2010-cohen.pdf.*$" "/doc/biology/2010-cohen-2.pdf";
+"~^/doc/crime/2012-barnes.pdf.*$" "/doc/crime/2012-barnes-2.pdf";
+"~^/doc/ai/nn/cnn/2012-ciresan.pdf.*$" "/doc/ai/nn/cnn/2012-ciresan-2.pdf";
+"~^/doc/genetics/heritable/correlation/2012-deary.pdf.*$" "/doc/genetics/heritable/correlation/2012-deary-2.pdf";
+"~^/doc/cs/end-to-end-principle/2013-kell.pdf.*$" "/doc/cs/end-to-end-principle/2013-kell-2.pdf";
+"~^/doc/genetics/heritable/adoption/2013-lee.pdf.*$" "/doc/genetics/heritable/adoption/2013-lee-2.pdf";
+"~^/doc/music/music-distraction/2013-li.pdf.*$" "/doc/music/music-distraction/2013-li-2.pdf";
+"~^/doc/economics/automation/metcalfes-law/2013-metcalfe.pdf.*$" "/doc/economics/automation/metcalfes-law/2013-metcalfe-2.pdf";
+"~^/doc/cs/hardware/2014-horowitz.pdf.*$" "/doc/cs/hardware/2014-horowitz-2.pdf";
+"~^/doc/ai/scaling/hardware/2014-li.pdf.*$" "/doc/ai/scaling/hardware/2014-li-2.pdf";
+"~^/doc/psychiatry/depression/2015-gupta.pdf.*$" "/doc/psychiatry/depression/2015-gupta-2.pdf";
+"~^/doc/ai/2015-zhu.pdf.*$" "/doc/ai/2015-zhu-2.pdf";
+"~^/doc/darknet-market/2016-martin.pdf.*$" "/doc/darknet-market/2016-martin-2.pdf";
+"~^/doc/genetics/heritable/correlation/2016-oconnor.pdf.*$" "/doc/genetics/heritable/correlation/2016-oconnor-2.pdf";
+"~^/doc/cs/hardware/2016-zhang.pdf.*$" "/doc/cs/hardware/2016-zhang-2.pdf";
+"~^/doc/genetics/heritable/2017-aschard.pdf.*$" "/doc/genetics/heritable/2017-aschard-2.pdf";
+"~^/doc/economics/2017-schmidt.pdf.*$" "/doc/economics/2017-schmidt-2.pdf";
+"~^/doc/ai/nn/2017-wang.pdf.*$" "/doc/ai/nn/2017-wang-2.pdf";
+"~^/doc/genetics/heritable/correlation/2017-zhao.pdf.*$" "/doc/genetics/heritable/correlation/2017-zhao-2.pdf";
+"~^/doc/economics/2018-kim.pdf.*$" "/doc/economics/2018-kim-2.pdf";
+"~^/doc/biology/2018-maier.pdf.*$" "/doc/biology/2018-maier-2.pdf";
+"~^/doc/genetics/heritable/2018-martin.pdf.*$" "/doc/genetics/heritable/2018-martin-2.pdf";
+"~^/doc/psychology/2018-morgan.pdf.*$" "/doc/psychology/2018-morgan-2.pdf";
+"~^/doc/genetics/heritable/correlation/2018-patterson.pdf.*$" "/doc/genetics/heritable/correlation/2018-patterson-2.pdf";
+"~^/doc/biology/2018-wong.pdf.*$" "/doc/biology/2018-wong-2.pdf";
+"~^/doc/economics/2019-bai.pdf.*$" "/doc/economics/2019-bai-2.pdf";
+"~^/doc/ai/nn/2019-brynjolfsson.pdf.*$" "/doc/ai/nn/2019-brynjolfsson-2.pdf";
+"~^/doc/history/2019-graves.pdf.*$" "/doc/history/2019-graves-2.pdf";
+"~^/doc/genetics/heritable/2019-gurdasani.pdf.*$" "/doc/genetics/heritable/2019-gurdasani-2.pdf";
+"~^/doc/genetics/heritable/2019-joyner.pdf.*$" "/doc/genetics/heritable/2019-joyner-2.pdf";
+"~^/doc/genetics/heritable/2019-kandler.pdf.*$" "/doc/genetics/heritable/2019-kandler-2.pdf";
+"~^/doc/genetics/heritable/2019-liu.pdf.*$" "/doc/genetics/heritable/2019-liu-2.pdf";
+"~^/doc/biology/2019-ng.pdf.*$" "/doc/biology/2019-ng-2.pdf";
+"~^/doc/psychiatry/depression/2019-reardon.pdf.*$" "/doc/psychiatry/depression/2019-reardon-2.pdf";
+"~^/doc/cat/catnip/2019-sharma.pdf.*$" "/doc/cat/catnip/2019-sharma-2.pdf";
+"~^/doc/genetics/heritable/rare/2019-shi.pdf.*$" "/doc/genetics/heritable/rare/2019-shi-2.pdf";
+"~^/doc/genetics/genome-synthesis/2019-wang.pdf.*$" "/doc/genetics/genome-synthesis/2019-wang-2.pdf";
+"~^/doc/genetics/heritable/2019-willoughby.pdf.*$" "/doc/genetics/heritable/2019-willoughby-2.pdf";
+"~^/doc/sociology/2019-wright.pdf.*$" "/doc/sociology/2019-wright-2.pdf";
+"~^/doc/darknet-market/2019-yang.pdf.*$" "/doc/darknet-market/2019-yang-2.pdf";
+"~^/doc/genetics/gametogenesis/2019-zheng.pdf.*$" "/doc/genetics/gametogenesis/2019-zheng-2.pdf";
+"~^/doc/genetics/heritable/rare/2019-zhou.pdf.*$" "/doc/genetics/heritable/rare/2019-zhou-2.pdf";
+"~^/doc/genetics/heritable/adoption/2020-anderson.pdf.*$" "/doc/genetics/heritable/adoption/2020-anderson-2.pdf";
+"~^/doc/design/typography/2020-arbel.pdf.*$" "/doc/design/typography/2020-arbel-2.pdf";
+"~^/doc/ai/anime/danbooru/2020-cao.pdf.*$" "/doc/ai/anime/danbooru/2020-cao-2.pdf";
+"~^/doc/ai/nn/transformer/gpt/dall-e/1/2020-chen.pdf.*$" "/doc/ai/nn/transformer/gpt/dall-e/1/2020-chen-2.pdf";
+"~^/doc/economics/2020-das.pdf.*$" "/doc/economics/2020-das-2.pdf";
+"~^/doc/psychology/personality/2020-haslam.pdf.*$" "/doc/psychology/personality/2020-haslam-2.pdf";
+"~^/doc/economics/2020-johnson.pdf.*$" "/doc/economics/2020-johnson-2.pdf";
+"~^/doc/economics/2020-kim.pdf.*$" "/doc/economics/2020-kim-2.pdf";
+"~^/doc/genetics/heritable/2020-maes.pdf.*$" "/doc/genetics/heritable/2020-maes-2.pdf";
+"~^/doc/psychology/2020-miller.pdf.*$" "/doc/psychology/2020-miller-2.pdf";
+"~^/doc/psychedelic/2020-olson.pdf.*$" "/doc/psychedelic/2020-olson-2.pdf";
+"~^/doc/ai/2020-xia.pdf.*$" "/doc/ai/2020-xia-2.pdf";
+"~^/doc/genetics/heritable/correlation/2020-xu.pdf.*$" "/doc/genetics/heritable/correlation/2020-xu-2.pdf";
+"~^/doc/darknet-market/agora/2020-yang.pdf.*$" "/doc/darknet-market/agora/2020-yang-2.pdf";
+"~^/doc/darknet-market/2020-zhou.pdf.*$" "/doc/darknet-market/2020-zhou-2.pdf";
+"~^/doc/crime/2021-anderson.pdf.*$" "/doc/crime/2021-anderson-2.pdf";
+"~^/doc/iq/ses/2021-brown.pdf.*$" "/doc/iq/ses/2021-brown-2.pdf";
+"~^/doc/economics/2021-desrochers.pdf.*$" "/doc/economics/2021-desrochers-2.pdf";
+"~^/doc/psychiatry/depression/2021-ferguson.pdf.*$" "/doc/psychiatry/depression/2021-ferguson-2.pdf";
+"~^/doc/genetics/heritable/2021-he.pdf.*$" "/doc/genetics/heritable/2021-he-2.pdf";
+"~^/doc/ai/nn/transformer/gpt/lamda/2021-jiang.pdf.*$" "/doc/ai/nn/transformer/gpt/lamda/2021-jiang-2.pdf";
+"~^/doc/psychology/cognitive-bias/2021-klebl.pdf.*$" "/doc/psychology/cognitive-bias/2021-klebl-2.pdf";
+"~^/doc/sociology/2021-liu.pdf.*$" "/doc/sociology/2021-liu-2.pdf";
+"~^/doc/genetics/heritable/2021-mallard.pdf.*$" "/doc/genetics/heritable/2021-mallard-2.pdf";
+"~^/doc/iq/ses/2021-marks.pdf.*$" "/doc/iq/ses/2021-marks-2.pdf";
+"~^/doc/history/2021-norris.pdf.*$" "/doc/history/2021-norris-2.pdf";
+"~^/doc/genetics/heritable/rare/2021-sherman.pdf.*$" "/doc/genetics/heritable/rare/2021-sherman-2.pdf";
+"~^/doc/iq/2021-warne.pdf.*$" "/doc/iq/2021-warne-2.pdf";
+"~^/doc/culture/2021-whiten.pdf.*$" "/doc/culture/2021-whiten-2.pdf";
+"~^/doc/genetics/editing/2021-yu.pdf.*$" "/doc/genetics/editing/2021-yu-2.pdf";
+"~^/doc/psychology/personality/conscientiousness/2021-zell.pdf.*$" "/doc/psychology/personality/conscientiousness/2021-zell-2.pdf";
+"~^/doc/genetics/heritable/correlation/2021-zhang.pdf.*$" "/doc/genetics/heritable/correlation/2021-zhang-2.pdf";
+"~^/doc/genetics/heritable/2022-anderson.pdf.*$" "/doc/genetics/heritable/2022-anderson-2.pdf";
+"~^/doc/economics/2022-baldwin.pdf.*$" "/doc/economics/2022-baldwin-2.pdf";
+"~^/doc/psychiatry/depression/2022-cheng.pdf.*$" "/doc/psychiatry/depression/2022-cheng-2.pdf";
+"~^/doc/genetics/editing/2022-chen.pdf.*$" "/doc/genetics/editing/2022-chen-2.pdf";
+"~^/doc/sociology/2022-ferguson.pdf.*$" "/doc/sociology/2022-ferguson-2.pdf";
+"~^/doc/ai/anime/danbooru/2022-gao.pdf.*$" "/doc/ai/anime/danbooru/2022-gao-2.pdf";
+"~^/doc/economics/2022-greenberg.pdf.*$" "/doc/economics/2022-greenberg-2.pdf";
+"~^/doc/cat/psychology/2022-hogan.pdf.*$" "/doc/cat/psychology/2022-hogan-2.pdf";
+"~^/doc/ai/anime/2022-huang.pdf.*$" "/doc/ai/anime/2022-huang-2.pdf";
+"~^/doc/economics/2022-kelly.pdf.*$" "/doc/economics/2022-kelly-2.pdf";
+"~^/doc/genetics/heritable/correlation/2022-kendler.pdf.*$" "/doc/genetics/heritable/correlation/2022-kendler-2.pdf";
+"~^/doc/ai/anime/2022-ko.pdf.*$" "/doc/ai/anime/2022-ko-2.pdf";
+"~^/doc/iq/ses/2022-nye.pdf.*$" "/doc/iq/ses/2022-nye-2.pdf";
+"~^/doc/genetics/cloning/2022-wei.pdf.*$" "/doc/genetics/cloning/2022-wei-2.pdf";
+"~^/doc/psychology/2022-wilson.pdf.*$" "/doc/psychology/2022-wilson-2.pdf";
+"~^/doc/genetics/genome-synthesis/2022-xu.pdf.*$" "/doc/genetics/genome-synthesis/2022-xu-2.pdf";
+"~^/doc/ai/nn/gan/stylegan/2023-li.pdf.*$" "/doc/ai/nn/gan/stylegan/2023-li-2.pdf";
+"~^/doc/genetics/heritable/2005-plomin.pdf.*$" "/doc/genetics/heritable/2005-plomin-2.pdf";
+"~^/doc/genetics/heritable/correlation/2005-plomin.pdf.*$" "/doc/genetics/heritable/correlation/2005-plomin-3.pdf";
+"~^/doc/cs/hardware/2017-li.pdf.*$" "/doc/cs/hardware/2017-li-2.pdf";
+"~^/doc/genetics/heritable/correlation/2017-li.pdf.*$" "/doc/genetics/heritable/correlation/2017-li-3.pdf";
+"~^/doc/design/typography/sentence-spacing/2018-johnson.pdf.*$" "/doc/design/typography/sentence-spacing/2018-johnson-2.pdf";
+"~^/doc/genetics/heritable/2018-johnson.pdf.*$" "/doc/genetics/heritable/2018-johnson-3.pdf";
+"~^/doc/history/2018-wang.pdf.*$" "/doc/history/2018-wang-2.pdf";
+"~^/doc/iq/2018-wang.pdf.*$" "/doc/iq/2018-wang-3.pdf";
+"~^/doc/ai/anime/danbooru/2018-zhang.pdf.*$" "/doc/ai/anime/danbooru/2018-zhang-2.pdf";
+"~^/doc/genetics/heritable/2018-zhang.pdf.*$" "/doc/genetics/heritable/2018-zhang-3.pdf";
+"~^/doc/ai/anime/danbooru/2019-lee.pdf.*$" "/doc/ai/anime/danbooru/2019-lee-2.pdf";
+"~^/doc/iq/2019-lee.pdf.*$" "/doc/iq/2019-lee-3.pdf";
+"~^/doc/darknet-market/2019-wu.pdf.*$" "/doc/darknet-market/2019-wu-2.pdf";
+"~^/doc/music/music-distraction/2019-wu.pdf.*$" "/doc/music/music-distraction/2019-wu-3.pdf";
+"~^/doc/ai/nn/fully-connected/2019-zhang.pdf.*$" "/doc/ai/nn/fully-connected/2019-zhang-2.pdf";
+"~^/doc/darknet-market/2019-zhang.pdf.*$" "/doc/darknet-market/2019-zhang-3.pdf";
+"~^/doc/cat/psychology/2020-li.pdf.*$" "/doc/cat/psychology/2020-li-2.pdf";
+"~^/doc/genetics/heritable/correlation/2020-li.pdf.*$" "/doc/genetics/heritable/correlation/2020-li-3.pdf";
+"~^/doc/genetics/editing/2020-lu.pdf.*$" "/doc/genetics/editing/2020-lu-2.pdf";
+"~^/doc/genetics/heritable/2020-lu.pdf.*$" "/doc/genetics/heritable/2020-lu-3.pdf";
+"~^/doc/genetics/editing/2020-wang.pdf.*$" "/doc/genetics/editing/2020-wang-2.pdf";
+"~^/doc/genetics/selection/artificial/2020-wang.pdf.*$" "/doc/genetics/selection/artificial/2020-wang-3.pdf";
+"~^/doc/ai/anime/danbooru/2020-zheng.pdf.*$" "/doc/ai/anime/danbooru/2020-zheng-2.pdf";
+"~^/doc/economics/copyright/2020-zheng.pdf.*$" "/doc/economics/copyright/2020-zheng-3.pdf";
+"~^/doc/cat/psychology/2021-johnson.pdf.*$" "/doc/cat/psychology/2021-johnson-2.pdf";
+"~^/doc/economics/2021-johnson.pdf.*$" "/doc/economics/2021-johnson-3.pdf";
+"~^/doc/ai/anime/danbooru/2021-li.pdf.*$" "/doc/ai/anime/danbooru/2021-li-2.pdf";
+"~^/doc/economics/georgism/2021-li.pdf.*$" "/doc/economics/georgism/2021-li-3.pdf";
+"~^/doc/cat/psychology/2021-smith.pdf.*$" "/doc/cat/psychology/2021-smith-2.pdf";
+"~^/doc/genetics/heritable/2021-smith.pdf.*$" "/doc/genetics/heritable/2021-smith-3.pdf";
+"~^/doc/economics/2021-wang.pdf.*$" "/doc/economics/2021-wang-2.pdf";
+"~^/doc/genetics/heritable/correlation/2021-wang.pdf.*$" "/doc/genetics/heritable/correlation/2021-wang-3.pdf";
+"~^/doc/psychiatry/depression/2021-xu.pdf.*$" "/doc/psychiatry/depression/2021-xu-2.pdf";
+"~^/doc/psychology/neuroscience/2021-xu.pdf.*$" "/doc/psychology/neuroscience/2021-xu-3.pdf";
+"~^/doc/crime/2022-heller.pdf.*$" "/doc/crime/2022-heller-2.pdf";
+"~^/doc/economics/2022-heller.pdf.*$" "/doc/economics/2022-heller-3.pdf";
+"~^/doc/ai/anime/danbooru/2022-hu.pdf.*$" "/doc/ai/anime/danbooru/2022-hu-2.pdf";
+"~^/doc/psychology/neuroscience/2022-hu.pdf.*$" "/doc/psychology/neuroscience/2022-hu-3.pdf";
+"~^/doc/ai/anime/danbooru/2022-kim.pdf.*$" "/doc/ai/anime/danbooru/2022-kim-2.pdf";
+"~^/doc/genetics/selection/artificial/2022-kim.pdf.*$" "/doc/genetics/selection/artificial/2022-kim-3.pdf";
+"~^/doc/ai/nn/transformer/clip/2022-liu.pdf.*$" "/doc/ai/nn/transformer/clip/2022-liu-2.pdf";
+"~^/doc/ai/nn/transformer/gpt/2022-liu.pdf.*$" "/doc/ai/nn/transformer/gpt/2022-liu-3.pdf";
+"~^/doc/longevity/2021-lee.pdf.*$" "/doc/longevity/2021-lee-2.pdf";
+"~^/doc/longevity/fasting/2021-lee.pdf.*$" "/doc/longevity/fasting/2021-lee-3.pdf";
+"~^/doc/sociology/2021-lee.pdf.*$" "/doc/sociology/2021-lee-4.pdf";
+"~^/doc/biology/2021-yang.pdf.*$" "/doc/biology/2021-yang-2.pdf";
+"~^/doc/design/typography/2021-yang.pdf.*$" "/doc/design/typography/2021-yang-3.pdf";
+"~^/doc/psychology/cognitive-bias/2021-yang.pdf.*$" "/doc/psychology/cognitive-bias/2021-yang-4.pdf";
+"~^/doc/darknet-market/2019-chen.pdf.*$" "/doc/darknet-market/2019-chen-2.pdf";
+"~^/doc/economics/2019-chen.pdf.*$" "/doc/economics/2019-chen-3.pdf";
+"~^/doc/genetics/sequencing/2019-chen.pdf.*$" "/doc/genetics/sequencing/2019-chen-4.pdf";
+"~^/doc/psychology/2019-chen.pdf.*$" "/doc/psychology/2019-chen-5.pdf";
+"~^/doc/ai/nn/gan/biggan/2022-wang.pdf.*$" "/doc/ai/nn/gan/biggan/2022-wang-2.pdf";
+"~^/doc/biology/2022-wang.pdf.*$" "/doc/biology/2022-wang-3.pdf";
+"~^/doc/cs/security/2022-wang.pdf.*$" "/doc/cs/security/2022-wang-4.pdf";
+"~^/doc/genetics/heritable/correlation/2022-wang.pdf.*$" "/doc/genetics/heritable/correlation/2022-wang-6.pdf";
+"~^/doc/philosophy/ethics/2022-wang.pdf.*$" "/doc/philosophy/ethics/2022-wang-7.pdf";
+"~^/doc/genetics/heritable/correlation/2005-johnson-2.pdf.*$" "/doc/genetics/heritable/correlation/2005-johnson-3.pdf";
+"~^/doc/cs/end-to-end-principle/2013-kell-2.pdf.*$" "/doc/cs/end-to-end-principle/2013-kell-3.pdf";
+"~^/doc/genetics/selection/natural/2019-chen-2.pdf.*$" "/doc/genetics/selection/natural/2019-chen-3.pdf";
+"~^/doc/cs/end-to-end-principle/2013-kell-3.pdf.*$" "/doc/cs/end-to-end-principle/2013-kell-4.pdf";
+"~^/doc/economics/2019-chen-3.pdf.*$" "/doc/economics/2019-chen-4.pdf";
+"~^/doc/economics/2019-chen-4.pdf.*$" "/doc/economics/2019-chen-6.pdf";
+"~^/doc/ai/nn/fully-connected/2019-zhang-2.pdf.*$" "/doc/ai/nn/fully-connected/2019-zhang-4.pdf";
+"~^/doc/genetics/editing/2020-wang-2.pdf.*$" "/doc/genetics/editing/2020-wang-4.pdf";
+"~^/doc/darknet-market/2020-yang-2.pdf.*$" "/doc/darknet-market/2020-yang-3.pdf";
+"~^/doc/genetics/editing/2022-wang-2.pdf.*$" "/doc/genetics/editing/2022-wang-5.pdf";
+"~^/doc/psychiatry/depression/2021-li-2.pdf.*$" "/doc/psychiatry/depression/2021-li-4.pdf";
+"~^/doc/sociology/technology/2022-wang.pdf.*$" "/doc/sociology/technology/2022-wang-8.pdf";
