--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10953,6 +10953,24 @@
 "~^/doc/biology/compnews/urgnorvirnr.html.*$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
 "~^/doc/biology/2000-iapac-norvir/images/nav_mainpage.gif.*$" "/doc/biology/2000-iapac-norvir/nav_mainpage.gif";
 "~^/doc/2006-drescher-goodandreal.pdf.*$" "/doc/statistics/decision/2006-drescher-goodandreal.pdf";
+"~^/doc/genetics/heritable/1949-pastore-thenaturenurturecontroversy$" "/doc/genetics/heritable/1949-pastore-thenaturenurturecontroversy.pdf";
+"~^/AI-generated-anime-characters.*$" "/face";
+"~^/DALL-E/，.*$" "/DALL-E";
+"~^/got-3$" "/gpt-3";
+"~^/got3$" "/gpt-3";
+"~^/doc/ai/nn/transformer/gp/index.t/inner-monologue.*$" "/doc/ai/nn/transformer/gpt/inner-monologue/index";
+"~^/doc/ai/nn/transformer/gp/index.t/inner-monologue/index.*$" "/doc/ai/nn/transformer/gpt/inner-monologue/index";
+"~^/doc/rotten.com/library/religion/scientology/index$" "/doc/rotten.com/library/religion/scientology/index.html";
+"~^/doc/psychiatry/lithium/2014-mauer.pdf%5C$" "/doc/psychiatry/lithium/2014-mauer.pdf";
+"~^/Happenings$" "/fiction/happenings";
+"~^/doc/%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD-smithset.pdf$" "/doc/bitcoin/2014-smithset.pdf";
+"~^/doc/20120703-20130102-gwern.net-analytics.pdf$" "/doc/traffic/20120703-20130102-gwern.net-analytics.pdf";
+"~^/BiggAN$" "/biggan";
+"~^/Gestion$" "/question";
+"~^/doc/gan/$" "/doc/ai/nn/gan/index";
+"~^/Prediction%25-markets$" "/prediction-markets";
+"~^/static/build/linkarchive.hs$" "/static/build/LinkArchive.hs";
+"~^/doc/darknet-market/2020-jeziorowski-1.pdf.*$" "/doc/darknet-market/2020-jeziorowski.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -16369,6 +16387,25 @@
 "~^/frischetrueffeln.*$" "/static/404";
 "~^/tvplay.*$" "/static/404";
 "~^/distransnaker.*$" "/static/404";
+"~^/note/bcams.*$" "/static/404";
+"~^/doc/obBVbp3y.*$" "/static/404";
+"~^/static/img/logo/vendor/.*$" "/static/404";
+"~^/robots.txt/.php.*$" "/static/404";
+"~^/koinslot.*$" "/static/404";
+"~^/goo.gl/.*$" "/static/404";
+"~^/_google.*$" "/static/404";
+"~^/biostalis.*$" "/static/404";
+"~^/bestdarknetmarket.*$" "/static/404";
+"~^/amiclear.*$" "/static/404";
+"~^/ambbetlaos.*$" "/static/404";
+"~^/98e..*$" "/static/404";
+"~^/%242022.*$" "/static/404";
+"~^/143.198.*$" "/static/404";
+"~^/sudburytrails.info.*$" "/static/404";
+"~^/[a-z8]slot\.com$" "/static/404";
+"~^/[a-z8]slot\.com/.*$" "/static/404";
+"~^/ikon.*\.com$" "/static/404";
+"~^/gallery$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
