--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9313,3 +9313,8 @@ default "";
 "~^/doc/genetics/editing/2022-wang-2.pdf.*$" "/doc/genetics/editing/2022-wang-5.pdf";
 "~^/doc/psychiatry/depression/2021-li-2.pdf.*$" "/doc/psychiatry/depression/2021-li-4.pdf";
 "~^/doc/sociology/technology/2022-wang.pdf.*$" "/doc/sociology/technology/2022-wang-8.pdf";
+"~^/doc/sociology/2021-desrochers.pdf.*$" "/doc/sociology/2021-desrochers-3.pdf";
+"~^/doc/sociology/2020-lu.pdf.*$" "/doc/sociology/2020-lu-4.pdf";
+"~^/doc/sociology/2021-marks.pdf.*$" "/doc/sociology/2021-marks-3.pdf";
+"~^/doc/genetics/heritable/2019-kandler.pdf.*$" "/doc/genetics/heritable/2019-kandler-3.pdf";
+"~^/doc/genetics/heritable/1972-page-2.pdf.*$" "/doc/genetics/heritable/1972-page-3.pdf";
