--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -813,6 +813,10 @@ server {
         rewrite ^/image/(?<old>.*)-530px.jpg-530px.jpg$ /image/$old-530px.jpg permanent;
 
         rewrite ^/image/(?<old>.*)$ /doc/$old permanent;
+        rewrite ^/genetics/(?<old>.*)$ /doc/genetics/$old permanent;
+        rewrite ^/doc/gan/stylegan/(?<old>.*)$ /doc/ai/nn/gan/stylegan/$old permanent;
+        rewrite ^/(?<old>.*)，.*$ /$old permanent;
+        rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
