--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9318,3 +9318,4 @@ default "";
 "~^/doc/sociology/2021-marks.pdf.*$" "/doc/sociology/2021-marks-3.pdf";
 "~^/doc/genetics/heritable/2019-kandler.pdf.*$" "/doc/genetics/heritable/2019-kandler-3.pdf";
 "~^/doc/genetics/heritable/1972-page-2.pdf.*$" "/doc/genetics/heritable/1972-page-3.pdf";
+"~^/doc/genetics/heritable/2014-li.pdf.*$" "/doc/genetics/heritable/correlation/2014-li.pdf";
