--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10971,7 +10971,6 @@
 "~^/Prediction%25-markets$" "/prediction-markets";
 "~^/static/build/linkarchive.hs$" "/static/build/LinkArchive.hs";
 "~^/doc/darknet-market/2020-jeziorowski-1.pdf.*$" "/doc/darknet-market/2020-jeziorowski.pdf";
-
 "~^/Arias-past-present-and-future-2$" "/arias-past-present-and-future";
 "~^/doc/Cat-Sense$" "/cat-sense";
 "~^/Choosing$" "/choosing-software";
@@ -11096,6 +11095,17 @@
 "~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf．.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/doc/2011-wade.pdf.*$" "/doc/melatonin/2011-wade.pdf";
+"~^/StoryOfYourLife.*$" "/story-of-your-life";
+"~^/doc/iq/1951-roe-scientists.pdf.*$" "/doc/iq/high/anne-roe/1951-roe-scientists.pdf";
+"~^/doc/[12][0-9][0-9][0-9]+$" "/doc/index";
+"~^/dalle-avatar.*$" "/dalle";
+"~^/GAN-anime.*$" "/face";
+"~^/doc/genetics/2003-plomin.pdf.*$" "/doc/genetics/heritable/2003-plomin.pdf";
+"~^/note/nn$" "/note/scaling";
+"~^/DNM-survival.*Darknet.*$" "/dnm-survival";
+"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf．.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
+"~^/GPT-3-creative.*$" "/gpt-3";
+"~^/note/nn/index.*$" "/doc/ai/nn/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -16534,6 +16544,12 @@
 "~^/[Ww]ittgenstein-thesis.*$" "/static/404";
 "~^/[Mm]oulton.*$" "/static/404";
 "~^/[Cc]hocolate.*$" "/static/404";
+"~^/homele.*$" "/static/404";
+"~^/ravehomes.*$" "/static/404";
+"~^/homerepair.*$" "/static/404";
+"~^/miamitelevision.*$" "/static/404";
+"~^/meta\.json.*$" "/static/404";
+"~^/betvisa.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
