--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9319,3 +9319,4 @@ default "";
 "~^/doc/genetics/heritable/2019-kandler.pdf.*$" "/doc/genetics/heritable/2019-kandler-3.pdf";
 "~^/doc/genetics/heritable/1972-page-2.pdf.*$" "/doc/genetics/heritable/1972-page-3.pdf";
 "~^/doc/genetics/heritable/2014-li.pdf.*$" "/doc/genetics/heritable/correlation/2014-li.pdf";
+"~^/doc/genetics/heritable/rare/2023-liang.pdf.*$" "/doc/genetics/heritable/rare/2023-liang-2.pdf";
