--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -816,7 +816,9 @@ server {
         rewrite ^/genetics/(?<old>.*)$ /doc/genetics/$old permanent;
         rewrite ^/doc/gan/stylegan/(?<old>.*)$ /doc/ai/nn/gan/stylegan/$old permanent;
         rewrite ^/(?<old>.*)，.*$ /$old permanent;
+        rewrite ^/Docs?/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
+        rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
