--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9320,3 +9320,5 @@ default "";
 "~^/doc/genetics/heritable/1972-page-2.pdf.*$" "/doc/genetics/heritable/1972-page-3.pdf";
 "~^/doc/genetics/heritable/2014-li.pdf.*$" "/doc/genetics/heritable/correlation/2014-li.pdf";
 "~^/doc/genetics/heritable/rare/2023-liang.pdf.*$" "/doc/genetics/heritable/rare/2023-liang-2.pdf";
+"~^/doc/ai/2021-power-poster.png.*$" "/doc/ai/nn/fully-connected/2021-power-poster.png";
+"~^/doc/statistics/decision/1990-dantzig-dietproblem.pdf.*$" "/doc/statistics/decision/1990-dantzig.pdf";
