--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ build/generateSimilar
 build/preprocess-markdown
 build/generateSimilarLinks
 build/guessTag
+build/**/*.html
+css/**/*.html
+js/**/*.html
