--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11182,6 +11182,101 @@
 "~^/DALL-E/$" "https://openai.com/blog/dall-e/";
 "~^/dalle$" "https://openai.com/blog/dall-e/";
 "~^/DALLE2/$" "https://openai.com/dall-e-2/";
+"~^/doc/genetics/heritable/1928-burks-1.pdf.*$" "/doc/genetics/heritable/1928-burks.pdf";
+"~^/GPT-3-image.*$" "/gpt-3";
+"~^/Story-Of-Your-Life.*$" "/story-of-your-life";
+"~^/doc/longevity/favicon.ico$" "/static/img/favicon.png";
+"~^/fiction/favicon.ico$" "/static/img/favicon.png";
+"~^/doc/statistics/2017-adams.pdf$" "/doc/statistics/causality/2017-adams.pdf";
+"~^/doc/modafinil/1994-de-s%C3%A9r%C3%A9ville.pdf$" "/doc/modafinil/1994-desereville.pdf";
+"~^/doc/genetics/2016-hubbard.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5026259/";
+"~^/doc/dnb/2009-anda.pdf$" "/doc/statistics/bias/2009-anda.pdf";
+"~^/doc/biology/ritonavir.html$" "/static/404"; # IA didn't capture it, seems
+"~^/doc/2016-griffiths.pdf.*$" "/doc/psychedelic/2016-griffiths.pdf";
+"~^/Treadmill.*$" "/treadmill";
+"~^/The-Existential-Risk-of-Mathematical-Error.*$" "/math-error";
+"~^/Search.*$" "/search";
+"~^/psychology/1969-torrance.pdf$" "/doc/psychology/personality/1969-torrance.pdf";
+"~^/note/scaling-hypothesis$" "/scaling-hypothesis";
+"~^/newsletter/2023%E5%B9.*$" "/newsletter/2023/index";
+"~^/gan-anime.*$" "/face";
+"~^/doc/www/www.changizi.com/82e766ee9a407241bcbcfd5b9e2c69d1083ecba1.*$" "/doc/cs/algorithm/2008-changizi.pdf";
+"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf%EF%BC%8E$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
+"~^/doc/technology/2017-02-%C3%82%C2%BF$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/doc/statistics/meta-analysis/2004-hunterschmidt-6.*$" "/doc/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis.pdf";
+"~^/doc//*/fiction/The-Buddhas-Wheel$" "/fiction/the-buddhas-wheel";
+"~^/doc/statistics/decision/1939-taylor.pdf%C2%A0$" "/doc/statistics/decision/1939-taylor.pdf";
+"~^/doc/statistics/2011-young\.pdf.*$" "/doc/statistics/causality/2011-young.pdf";
+"~^/doc/statistics/2008-gerber\.pdf.*$" "/doc/statistics/bias/2008-gerber.pdf";
+"~^/doc/statistics/2007-ocollins\.pdf.*$" "/doc/statistics/bias/animal/2007-ocollins.pdf";
+"~^/doc/statistics/1986-henrion\.pdf.*$" "/doc/statistics/bias/1986-henrion.pdf";
+"~^/doc/sr/agora-focia-almd-01702438594\.pdf.*$" "/doc/darknet-market/agora/focia-almd-01702438594.pdf";
+"~^/doc/sr/2014-12-17-agora-willyclock-complaint\.pdf.*$" "/doc/darknet-market/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/doc/.*/Nootropics$" "/nootropic/nootropics";
+"~^/doc/reinforcement-learning/active-learning/index$" "/doc/reinforcement-learning/exploration/active-learning/index";
+"~^/doc/psychology/writing/2018-10-27-%C3%83%E2%80%9A%C3%82%C2%BF$" "/doc/psychology/writing/2018-10-27-googlesurveys-morningwriting.csv";
+"~^/doc/personal/2011-gwern-yourmorals.org/contact_experimenter.php$" "/static/404";
+"~^/doc/nootropics/1990-schrauzer\.pdf.*$" "/doc/psychiatry/lithium/1990-schrauzer.pdf";
+"~^/doc/music/foxtailgrassstudio-cattleya%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF-%FF%FF%FF-04.jpg-768px.jpg$" "/doc/music/foxtailgrassstudio-cattleya????-?-04.jpg-768px.jpg";
+"~^/doc/modafinil/favicon.ico$" "/static/img/favicon.png";
+"~^/doc/math/favicon.ico$" "/static/img/favicon.png";
+"~^/doc/logo/logo-whitebg-large-border.png$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/doc/iq/high/smpy/2019-worrel\.pdf.*$" "/doc/iq/high/smpy/2019-worrell.pdf";
+"~^/doc/iq/high/munich/2004-heller.pdf\..*$" "/doc/iq/high/munich/2004-heller.pdf";
+"~^/doc/iq/1990-bouchard$" "/doc/iq/1990-bouchard.pdf";
+"~^/doc/genetics/2017-mcrae\.pdf.*$" "/doc/genetics/heritable/rare/2017-mcrae.pdf";
+"~^/doc/genetics/2017-klarin\.pdf.*$" "/doc/genetics/heritable/correlation/2017-klarin.pdf";
+"~^/doc/genetics/2014-fitzgerald\.pdf.*$" "/doc/genetics/heritable/2014-fitzgerald.pdf";
+"~^/doc/genetics/1986-labuda\.pdf.*$" "/doc/genetics/heritable/1986-labuda.pdf";
+"~^/doc/gan/2019-03-16$" "/doc/ai/nn/gan/stylegan/2019-03-16-gwern-stylegan-facestraining.mp4";
+"~^/doc/dnb/1990-rothman\.pdf.*$" "/doc/statistics/causality/1990-rothman.pdf";
+"~^/doc/dnb/1985-godfrey\.pdf.*$" "/doc/statistics/meta-analysis/1985-godfrey.pdf";
+"~^/doc/dnb/1970-schein\.pdf.*$" "/doc/statistics/bias/animal/1970-schein.pdf";
+"~^/doc/co2/2015-s$" "/doc/co2/2015-stafford.pdf";
+"~^/doc/bitcoin/pirateat40/SEC\+vs.\+pirateat40\+2\.pdf.*$" "/doc/bitcoin/pirateat40/secvs.pirateat402.pdf";
+"~^/doc/bitcoin/pirateat40/sec\+vs.\+pirateat40\+2\.pdf.*$" "/doc/bitcoin/pirateat40/secvs.pirateat402.pdf";
+"~^/doc/anime/eva/1996-newtype-anno-interview-%C3%A4%C.*$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/2017-kirkland\.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5641223/";
+"~^/doc/2013-kurzban\.pdf.*$" "/doc/psychology/willpower/2013-kurzban.pdf";
+"~^/doc/2011-zulkiply\.pdf.*$" "/doc/psychology/spaced-repetition/2011-zulkiply.pdf";
+"~^/doc/2009-agarwal-slides\.pdf.*$" "/doc/economics/2009-agarwal-slides.pdf";
+"~^/doc/2006-vaishnavi\.pdf.*$" "/doc/modafinil/2006-vaishnavi.pdf";
+"~^/doc/1996-conners\.pdf.*$" "/doc/nicotine/1996-conners.pdf";
+"~^/doc/1994-review-chemicalstructure-racetams\.pdf.*$" "/doc/nootropic/1994-review-chemicalstructure-racetams.pdf";
+"~^/doc/1985-pirolli\.pdf.*$" "/doc/psychology/spaced-repetition/1985-pirolli.pdf";
+"~^/cloning$" "/clone";
+"~^/complements$" "/complement";
+"~^/doc/2010-peen\.pdf.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/cat/2000-turner-thedomesticcat\.pdf.*$" "/doc/cat/2000-turner-thedomesticcat.pdf";
+"~^/doc/2001-demarco-peopleware-whymeasureperformance\.pdf.*$" "/doc/cs/algorithm/2001-demarco-peopleware-whymeasureperformance.pdf";
+"~^/doc/sr/2003-pickard-lsd-trial-transcript2\.pdf.*$" "/doc/darknet-markets/pickard/index.html";
+"~^/doc/dnb/2000-butzlaff$" "/doc/dual-n-back/2000-butzlaff.pdf";
+"~^/doc/jaeggi2003\.pdf.*$" "/doc/dual-n-back/2003-jaeggi.pdf";
+"~^/doc/1993-padmanabhan\.pdf.*$" "/doc/economics/1993-padmanabhan.pdf";
+"~^/doc/pe$" "/doc/personal/index";
+"~^/eva/1997-animeland-may-hideakianno-interview-english$" "/doc/eva/1997-animeland-may-hideakianno-interview-english";
+"~^/doc/genetics/2012-fu\.pdf.*$" "/doc/genetics/selection/natural/human/2012-fu.pdf";
+"~^/doc/193$" "/doc/index";
+"~^/doc/longevit$" "/doc/longevity/index";
+"~^/doc/spaced-rep$" "/doc/spaced-repetition/index";
+"~^/doc/statistics/2011-ioannidis\.pdf.*$" "/doc/statistics/decision/2011-ioannidis.pdf";
+"~^/doc/1984-frey\.pdf.*$" "/doc/statistics/decision/1984-frey.pdf";
+"~^/doc/Embryo-selection$" "/embryo-selection";
+"~^/TPbV$" "/tpb-bitcoin";
+"~^/GPT-3/$" "/gpt-3";
+"~^/chat$" "/index";
+"~^/Little$" "/littlewood";
+"~^/Sil$" "/silk-road";
+"~^/Mistake$" "/mistakes";
+"~^/nootropic/Milk$" "/milk";
+"~^/SYMPY$" "/smpy";
+"~^/Weather\?2$" "/weather";
+"~^/lorem-admonitions$" "/lorem-admonition";
+"~^/contact$" "/me#contact";
+"~^/doc/anime/eva/1996-newtype-anno-interview-作者.*$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/AI-generated-anime.*$" "/doc/ai/anime/index";
+"~^/doc/anime/eva/otaku-talk/index.*$" "/doc/anime/eva/little-boy/otaku-talk/index";
+"~^/Prompt-engineering.*$" "/gpt-3#prompt-engineering";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
