--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9322,3 +9322,4 @@ default "";
 "~^/doc/genetics/heritable/rare/2023-liang.pdf.*$" "/doc/genetics/heritable/rare/2023-liang-2.pdf";
 "~^/doc/ai/2021-power-poster.png.*$" "/doc/ai/nn/fully-connected/2021-power-poster.png";
 "~^/doc/statistics/decision/1990-dantzig-dietproblem.pdf.*$" "/doc/statistics/decision/1990-dantzig.pdf";
+"~^/doc/genetics/heritable/2018-wray-3.pdf.*$" "/doc/genetics/heritable/correlation/2018-wray-3.pdf";
