--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9323,3 +9323,9 @@ default "";
 "~^/doc/ai/2021-power-poster.png.*$" "/doc/ai/nn/fully-connected/2021-power-poster.png";
 "~^/doc/statistics/decision/1990-dantzig-dietproblem.pdf.*$" "/doc/statistics/decision/1990-dantzig.pdf";
 "~^/doc/genetics/heritable/2018-wray-3.pdf.*$" "/doc/genetics/heritable/correlation/2018-wray-3.pdf";
+"~^/doc/rotten.com/library/bio/crime/serial-killers/elmer-wayne-henley/areyouguilty.rm.*$" "/doc/rotten.com/library/bio/crime/serial-killers/elmer-wayne-henley/areyouguilty.mp3";
+"~^/doc/rotten.com/library/bio/crime/serial-killers/elmer-wayne-henley/killeddean.rm.*$" "/doc/rotten.com/library/bio/crime/serial-killers/elmer-wayne-henley/killeddean.mp3";
+"~^/doc/rotten.com/library/bio/crime/serial-killers/elmer-wayne-henley/policeinterview.rm.*$" "/doc/rotten.com/library/bio/crime/serial-killers/elmer-wayne-henley/policeinterview.mp3";
+"~^/doc/rotten.com/library/culture/batman/theme-song/batmantv.rm.*$" "/doc/rotten.com/library/culture/batman/theme-song/batmantv.mp3";
+"~^/doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.wav.*$" "doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.mp3";
+"~^/doc/economics/1997-freygeeare97.pdf.*$" "/doc/economics/1997-frey.pdf";
