--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9329,3 +9329,5 @@ default "";
 "~^/doc/rotten.com/library/culture/batman/theme-song/batmantv.rm.*$" "/doc/rotten.com/library/culture/batman/theme-song/batmantv.mp3";
 "~^/doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.wav.*$" "doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.mp3";
 "~^/doc/economics/1997-freygeeare97.pdf.*$" "/doc/economics/1997-frey.pdf";
+"~^/doc/ai/nn/1986-rumelhart.pdf.*$" "/doc/ai/nn/fully-connected/1986-rumelhart.pdf";
+"~^/doc/psychology/willpower/2022-ledform.html.*$" "/doc/psychology/willpower/2022-ledford.html";
