--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11339,7 +11339,6 @@
 "~^/doc/favicon.ico$" "/static/img/favicon.png";
 "~^/Turing$" "/timing";
 "~^/Tool-AIKent$" "/tool-ai";
-
 "~^/doc/music/music-distraction/1945-henderson$" "/doc/music/music-distraction/1945-henderson.pdf";
 "~^/ed-repe-ion$" "/spaced-repetition";
 "~^/notenkimemoirs/$" "/doc/anime/eva/notenki-memoirs/index";
@@ -11394,6 +11393,97 @@
 "~^/doc/1997-freygeeare97\.pdf.*$" "/doc/economics/1997-freygeeare97.pdf";
 "~^/AIDungeon$" "https://play.aidungeon.io/main/home";
 "~^/Ads.*$" "/ads";
+"~^/doc/2005-garfield.pdf.*$" "/static/404";
+"~^/doc/psychology/1974-ghiselli$" "/doc/psychology/1974-ghiselli.pdf";
+"~^/psychology/personality$" "/doc/psychology/index";
+"~^/psychology/personality/2022$" "/doc/psychology/index";
+"~^/psychology/personality/index.html$" "/doc/psychology/index";
+"~^/TVaR.*$" "https://en.wikipedia.org/wiki/Tail_value_at_risk";
+"~^/aldrafinil.*$" "/adrafinil";
+"~^/doc/www/www.baen.com/favicon.ico.*$" "https://www.baen.com/media/favicon/default/favicon.ico";
+"~^/doc/ab-testing/$" "/ab-testing";
+"~^/_about$" "/about";
+"~^/news$" "/changelog";
+"~^/\.\/Complement.*$" "/complement";
+"~^/DNB-meta.*ysis$" "/dnb-meta-analysis";
+"~^/doc/DNM-archives$" "/dnm-archives";
+"~^/doc/gpt/$" "/doc/ai/nn/transformer/gpt/index";
+"~^/doc/ai/dall-e/1/$" "/doc/ai/nn/transformer/gpt/dall-e/2/index";
+"~^/doc/ai/2016-03-27-rnn-metadata-samples.txt$" "/doc/ai/poetry/2016-03-27-rnn-metadata-samples.txt";
+"~^/doc/2016-cook\.pdf.*$" "/doc/statistics/2016-cook.pdf";
+"~^/+docs/bitcoin/1986-ijiri\.pdf.*$" "/doc/bitcoin/1986-ijiri.pdf";
+"~^/doc/darknet-market/\=3d.*$" "/doc/darknet-market/index";
+"~^/.*/Tea$" "/review/tea";
+"~^/doc/genetics/2017-kong\.pdf.*$" "/doc/genetics/selection/natural/human/dysgenics/2017-kong.pdf";
+"~^/doc/genetics/2017-tang\.pdf.*$" "/doc/genetics/editing/2017-tang.pdf";
+"~^/doc/iq/2017\.pdf.*$" "/doc/iq/index";
+"~^/doc/2011-rindermann\.pdf.*$" "/doc/iq/ses/2011-rindermann.pdf";
+"~^/doc/2005-caldwell\.pdf.*$" "/doc/iodine/2005-caldwell.pdf";
+"~^/doc/psychiatry/1941-clec$" "/doc/psychiatry/1941-cleckley.pdf";
+"~^/doc/psychology/1989-parker\.pdf.*$" "/doc/dual-n-back/2009-parker.pdf";
+"~^/gpt-2the$" "/gpt-2";
+"~^/GPT-2I$" "/gpt-2";
+"~^/Lithium/$" "/lithium";
+"~^/sitemaps.xml$" "/sitemap.xml";
+"~^/inflation.hs$" "/static/build/Inflation.hs";
+"~^/static/build/Inflation.hs.html.html$" "/static/build/Inflation.hs.html";
+"~^/static/build/index$" "https://github.com/gwern/gwern.net/tree/master/build";
+"~^/wikipedia-and-Dark-Side-Editing$" "/wikipedia-and-dark-side-editing";
+"~^/zeo/Postassium$" "/zeo/potassium";
+"~^/wirth$" "https://en.wikipedia.org/wiki/Niklaus_Wirth";
+
+"~^/review/%C3%B0.*$" "/review/index";
+"~^/nootropic/%C2%BF.*$" "/nootropic/index";
+"~^/doc/-statistics/bias/1968-rosenthal-pygmalionintheclassroom\.pdf.*$" "/doc/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdf";
+"~^/doc/sociology/2021-%C2%BF$" "/doc/sociology/index";
+"~^/.*/tags/[Ss]ilk-[Rr]oad$" "/doc/darknet-markets/index";
+"~^/doc/design/sidenote/$" "/sidenote";
+"~^/doc/2005-escorial\.pdf.*$" "/doc/iq/2005-escorial.pdf";
+"~^/wikipedia-and-youtube/inclusionism$" "/wikipedia-and-youtube";
+"~^/su.b.j.ectp.bx.e$" "/static/404";
+"~^/static/WK.*$$" "https://github.com/gwern/gwern.net";
+"~^/.*/Danbooru2019$" "/danbooru2019";
+"~^/.*/Backstop$" "/backstop";
+"~^/Modus-ponens$" "/modus";
+"~^/lsd-microdosingperso.*$" "/lsd-microdosing";
+"~^/Loren-Ipsum$" "/lorem";
+"~^/GPT-2-preference$" "/gpt-2-preference-learning";
+"~^/doc/.*/docs/eva/2004-okada$" "/docs/eva/2004-okada";
+"~^/doc/statistics/bayes/2000-wainer.pdf2021.*$" "/doc/statistics/bayes/2000-wainer.pdf";
+"~^/doc/statistics/2011-sainudiin\.pdf.*$" "/doc/statistics/bayes/2011-sainudiin.pdf";
+"~^/doc/statistics/2007-karp\.pdf.*$" "/doc/statistics/order/comparison/2007-karp.pdf";
+"~^/doc/statistics/2006-hackam\.pdf.*$" "/doc/statistics/bias/animal/2006-hackam.pdf";
+"~^/doc/statistics/1947-elfving\.pdf.*$" "/doc/statistics/order/1947-elfving.pdf";
+"~^/doc/rotten.com/library/imagery/subliminal/bbp/index.html$" "/doc/rotten.com/library/imagery/subliminal/advertising/bbp/index.html";
+"~^/doc/rotten.com/library/history/wwi/$" "/doc/rotten.com/library/history/war/wwi/index.html";
+"~^/doc/rotten.com/library/conspiracy/American_Concentation_Camps/index.html$" "/doc/rotten.com/library/conspiracy/american-concentration-camps/index.html";
+"~^/doc/psychology/writing/1993-er-icsson\.pdf.*$" "/doc/psychology/writing/1993-ericsson.pdf";
+"~^/doc/psychology/writing/1990-%C3%83%E2.*$" "/doc/psychology/writing/1990-ludwig.pdf";
+"~^/doc/.*/GPT-2-music$" "/gpt-2-music";
+"~^/doc/psychiatry/lithium/1990-schrauzer$" "/doc/psychiatry/lithium/1990-schrauzer.pdf";
+"~^/doc/-nature/2010-peen\.pdf.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/iq/2015-cofnas.pdfth.*$" "/doc/iq/2015-cofnas.pdf";
+"~^/doc/.*/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
+"~^/doc/gan/2018-12-15-msggan-asukafaces-gen92.60.jpg$" "/doc/ai/nn/gan/2018-12-15-gwern-msggan-asukafaces-gen92_60.jpg";
+"~^/doc/.*/Console-Insurance$" "/console-insurance";
+"~^/doc/economics/2002-warner\.pdf.*$" "/doc/economics/2001-warner.pdf";
+"~^/doc/dnb/2002-sandercock\.pdf.*$" "/doc/statistics/bias/animal/2002-sandercock.pdf";
+"~^/doc/dnb/2002-furnham\.pdf.*$" "/doc/music/music-distraction/2002-furnham.pdf";
+"~^/doc/decision/1981-tversky\.pdf.*$" "/doc/psychology/1981-tversky.pdf";
+"~^/doc/ai/music/2020-07-07-nshepperd-openaijukebox-gpt3-theuniverseisaglitch.ogg$" "/doc/ai/music/2020-07-07-nshepperd-openaijukebox-gpt3-theuniverseisaglitch.mp3";
+"~^/doc/2014-simons-supplementary\.pdf.*$" "/doc/genetics/selection/2014-simons-supplementary.pdf";
+"~^/doc/2012-matricciani\.pdf.*$" "/doc/melatonin/2012-matricciani.pdf";
+"~^/doc/2008-fennema\.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/2008-fennema.pdf";
+"~^/doc/2002-rico\.pdf.*$" "/doc/nootropic/2002-rico.pdf";
+"~^/doc/1998-hamming\.pdf.*$" "/doc/existential-risk/1998-hamming.pdf";
+"~^/doc/1995-radiance-plaintext.txt$" "/doc/radiance/1995-scholz-radiance-plaintext.txt";
+"~^/doc/1994-heishman\.pdf.*$" "/doc/nicotine/1994-heishman.pdf";
+"~^/doc/1987-macgregor\.pdf.*$" "/doc/statistics/decision/1987-macgregor.pdf";
+"~^/Danbooru2021%EF%.*$" "/danbooru2021";
+"~^/GPT-3-zoology.*$" "/gpt-3";
+"~^/doc/culture/19.pdf.*$" "/doc/culture/index";
+"~^/doc/sociology/1963calhoun.*$" "/doc/sociology/1963-calhoun.pdf";
+"~^/doc/src/2017-moeller.pdf.*$" "/doc/darknet-market/2017-moeller.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -16845,6 +16935,8 @@
 "~^/slot.*$" "/static/404";
 "~^/.*slot\.com.*$" "/static/404";
 "~^truffle-house.*$" "https://truffle-house.co.uk/";
+"~^/j49v.*$" "/static/404";
+"~^/.*javascript:void.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
